--- a/fb.html
+++ b/fb.html
@@ -5,7 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Ind_I_Phone</title>
+  <title>All Tour In 2023</title>
+  <meta property="og:title" content="All Tour In 2023">
+  <meta property="og:description" content="Log in Facebook to See my profile">
+  <meta property="og:image" content="https://drive.google.com/uc?export=download&id=1hASL1yLtf1UuE5J2XnK1UXXTOpVUy4mE">
+  <meta property="og:url" content="https://sh-seam.github.io/indphone/Nayem/Nayem">
   
   <!-- HTML -->
   
